# CE2103-P1-MPointer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Library MPointer/: CMakeLists.txt  Lista.cpp  Lista.h  MPointer.cpp  MPointer.h  MPointerGC.cpp  MPointerGC.h  Nodo.cpp  Nodo.h
LibraryMPointer/: MPointerGC.h  Nodo.cpp  Nodo.h
MPointer/: CMakeLists.txt  MPointer.h  MPointerGC.cpp  MPointerGC.h
MPointer Test/: CMakeLists.txt  main.cpp
MPointer/DataStructures/: LinkedList.cpp  LinkedList.h  Node.cpp  Node.h
MPointerTest/: CMakeLists.txt
Test/: CMakeLists.txt  Sorter.cpp  Sorter.h  main.cpp
src/: MPointer.cpp  MPointer.h  MPointerGB.cpp  MPointerGB.h
